# python-genai-batch1

./: README.md
learn-python/class01/: README.md  class01.py
learn-python/class02/: README.md  class01.py
learn-python/class03/: README.md  class03.py
learn-python/class04/: README.md  class04.py
learn-python/class05/: README.md  class05.py
learn-python/class06/: class06.py
learn-python/class07/: README.md  class07.py
learn-python/class08/: README.md  class08.py
learn-python/class09/: README.md  class09.py
learn-python/class10/: README.md  class10.py
learn-python/class11/: class11.py
learn-python/class12/: class12.py
learn-python/class13/: README.md  class11.py  class13.py  test.py
learn-python/class14/: README.md  class14.py  generateText.py
learn-python/class15/: README.md  class15.py
learn-python/class16/: README.md  data.json  example.txt  main.py
learn-python/class17/: main.py
learn-python/hello-fastapi/: README.md  pyproject.toml
learn-python/hello-fastapi/api/: main.py
