[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["naveed-rana <rana.naveed812@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pytest = "^8.1.1"
sqlmodel = "^0.0.16"
pymongo = "^4.6.3"
mypy = "^1.9.0"

[tool.poetry.scripts]
dev = "api.main:start"
prod = "api.main:production"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
